# ChangeLog for kde-base/qimageblitz
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/kde-base/qimageblitz/ChangeLog,v 1.4 2008/10/25 12:19:53 pvdabeel Exp $

  25 Oct 2008; Pieter Van den Abeele <pvdabeel@gentoo.org> qimageblitz-0.0.4.ebuild:
  Keyworded ~ppc. Closes bug #244176

  05 Mar 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  qimageblitz-0.0.4.ebuild:
  Make dependencies compatible with split Qt-4.4.0*.

  16 Feb 2008; Ingmar Vanhassel <ingmar@gentoo.org> ChangeLog:
  Spring cleaning

*qimageblitz-0.0.4 (18 Jan 2008)

  18 Jan 2008; Ingmar Vanhassel <ingmar@gentoo.org>
  +files/qimageblitz-9999-exec-stack.patch, +qimageblitz-0.0.4.ebuild:
  Added KDE 4.0's qimageblitz.
