@@ -1,5 +1,15 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX qimageblitz-9999-exec-stack.patch 369 RMD160 ab966c14a37ebfb18a2ef1ec0b8d70b5a72c43b8 SHA1 46560c916fd1f161b231f3fcc10a7018023be894 SHA256 d742ba9a5a25be8e7f472ddc1dd21836da13d60ce72718e51a59e092911d0cc4
 DIST qimageblitz-0.0.4.tar.bz2 55720 RMD160 9d1da1996ad8d6c3547bf1a6ce4d55a06df0cdfc SHA1 fa1c648d1dfa595b768f4ab481d9e2cd31e43d7e SHA256 e902298edbfedea123e59f27d03d23ca273716d555eb2af4eff3e513f170ca5e
-EBUILD qimageblitz-0.0.4.ebuild 990 RMD160 ab84e93a5bad1e9301ec2fa10b959ee988f3aa6f SHA1 8ced33729d23120ba004d17febe90fd3693ba63d SHA256 f473fbf3046f2723819b97d049d953c1139372c9423ae19e88a1422453fab11d
-MISC ChangeLog 743 RMD160 a48b8b9dfae5e5fe700b1fc8d2d7f7281ec9a487 SHA1 05dba4bff989b8da796ffc3df0a7be8eaa378c3c SHA256 1799803b761f3ad7916540f64d99abdcac4dcdd2dfc9bb20b9c48de76bad3e45
+EBUILD qimageblitz-0.0.4.ebuild 975 RMD160 394037899cc26b3ab46e9da823a2efdcf0215ef8 SHA1 cab4b366f4f9fbb3af597bf18247a1cfe7b61800 SHA256 2d5ce272df411d629bb4dd1e1f806a01d3bc1625ec6797d2f972b446981cad10
+MISC ChangeLog 846 RMD160 a55a230bb0d7ae8a98ad6baea38aeb3dbccc52a7 SHA1 ad0d79a468fda2f32f891778e4f930137d6d4852 SHA256 49cd29252a876397d4bf164e1bcff5864367fd22d8861b7da9bb3ef52febe745
 MISC metadata.xml 156 RMD160 ecce3b981f150c45ae1e84e2d208e678d6124259 SHA1 b64f7c0b4e5db816d82ad19848f72118af129d35 SHA256 2f4da28506b9d4185f320f67a6191d30c7a921217ed4447ed46ea0bc4aefc79a
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkkNWI8ACgkQ67wieSYcaxfS2ACfRAxRR3S+N9J+qpjSHflNCtKX
+PvUAoL2ODAJ6EzbRxY8ydvDnDWiL6O/w
+=89Bl
+-----END PGP SIGNATURE-----
