@@ -1,20 +1,18 @@
 # Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/kde-base/qimageblitz/qimageblitz-0.0.4.ebuild,v 1.3 2008/10/25 12:19:53 pvdabeel Exp $
+# $Header: /var/cvsroot/gentoo-x86/kde-base/qimageblitz/qimageblitz-0.0.4.ebuild,v 1.4 2008/11/02 07:36:39 vapier Exp $
 
 EAPI="1"
 
 inherit cmake-utils eutils
 
-DESCRIPTION="Qimageblitz is an interim image effect library that people can use until KDE 4.1"
+DESCRIPTION="interim image effect library that people can use until KDE 4.1"
 HOMEPAGE="http://websvn.kde.org/trunk/kdesupport/qimageblitz/"
-LICENSE="GPL-2 LGPL-2"
-
 SRC_URI="mirror://sourceforge/${PN}/${P}.tar.bz2"
 
-KEYWORDS="~amd64 ~ppc ~x86"
+LICENSE="GPL-2 LGPL-2"
+KEYWORDS="~amd64 ~ppc ~ppc64 ~x86"
 SLOT="0"
-
 IUSE="3dnow altivec debug mmx sse sse2"
 
 DEPEND="|| ( x11-libs/qt-gui:4
